Details
- 
    Bug 
- 
    Resolution: Fixed
- 
    Major 
- 
    Operating System: ReactOS 
 Platform: x86 Hardware
Description
The Delete key works on the keyboard and sends file to recycle bin, but Shift+Delete does nothing, and it should permenantly delete.
Attachments
Issue Links
- blocks
- 
                    CORE-1020 hotkey/mnemonic/accessibility missing -         
- Resolved
 
-         
- relates to
- 
                    CORE-17802 Shift Delete fails to permanently delete items -         
- Resolved
 
-         
- 
                    CORE-16333 fMask is always zero in bitmask as used in _DoDeleteDataObject -         
- Resolved
 
-