[SHELL32] - Add DoDeleteAsync method that takes the data object and the fMask parameter from IContextMenu in order to distinguish if we need a permanent delete. - CDefView: Properly add CMIC_MASK_SHIFT_DOWN and CMIC_MASK_CONTROL_DOWN flags when calling Invoke. - CDefaultContextMenu: use DoDeleteAsync and pass fmask so as to make Shift+Delete shortcut to permanently delete files. Note: GetKeyState sometimes returns wrong results but this doesn't concern the shell. CORE-4365

svn path=/trunk/; revision=69647